K8s/GCP/Ingress/Gateway_deployment-ingress-gar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway-service
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  strategy: {}
  template:
    metadata:

      labels:
        app: gateway-service
    spec:
      containers:
        - image: asia-south1-docker.pkg.dev/bamboo-zone-425706-v9/repo2/gateway-service:v1
          name: gateway-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5          
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-service
  name: gateway-service
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: gateway-service
status:
  loadBalancer: {}
