K8s/GCP/Ingress/Order_deployment-ingress-gar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:

      labels:
        app: order-service
    spec:
      containers:
        - image: asia-south1-docker.pkg.dev/bamboo-zone-425706-v9/repo2/order-service:v1
          name: order-service
          ports:
            - containerPort: 8092
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /order/actuator/health
              port: 8092
            initialDelaySeconds: 30
            periodSeconds: 5
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  type: NodePort
  ports:
    - name: "8092"
      port: 8092
      targetPort: 8092
  selector:
    app: order-service
status:
  loadBalancer: {}
