K8s/GCP/Ingress/ingress1.0.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gateway-service
            port:
              number: 8080
#      - path: /v2
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: order-service
#            port:
#              number: 8092
